force-app/main/default/objects/Contact/fields/AccessoriesInterest__c.field-meta.xml
<CustomField>
    <fullName>AccessoriesInterest__c</fullName>
    <description>Accessories Interest</description>
    <label>Accessories</label>
    <length>80</length>
    <type>Text</type>
</CustomField>