force-app/main/default/objects/Contact/fields/AttachedStore__c.field-meta.xml
<CustomField>
    <fullName>AttachedStore__c</fullName>
    <label>Attached Store</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A02</fullName>
            </value>
            <value>
                <fullName>A03</fullName>
            </value>
            <value>
                <fullName>A05</fullName>
            </value>
            <value>
                <fullName>A06</fullName>
            </value>
            <value>
                <fullName>A07</fullName>
            </value>
            <value>
                <fullName>A09</fullName>
            </value>
            <value>
                <fullName>A11</fullName>
            </value>
            <value>
                <fullName>A14</fullName>
            </value>
            <value>
                <fullName>A16</fullName>
            </value>
            <value>
                <fullName>A17</fullName>
            </value>
            <value>
                <fullName>A18</fullName>
            </value>
            <value>
                <fullName>A19</fullName>
            </value>
            <value>
                <fullName>A20</fullName>
            </value>
            <value>
                <fullName>A90</fullName>
            </value>
            <value>
                <fullName>A91</fullName>
            </value>
            <value>
                <fullName>AP1</fullName>
            </value>
            <value>
                <fullName>B01</fullName>
            </value>
            <value>
                <fullName>B02</fullName>
            </value>
            <value>
                <fullName>B04</fullName>
            </value>
            <value>
                <fullName>C01</fullName>
            </value>
            <value>
                <fullName>C02</fullName>
            </value>
            <value>
                <fullName>C03</fullName>
            </value>
            <value>
                <fullName>C04</fullName>
            </value>
            <value>
                <fullName>C05</fullName>
            </value>
            <value>
                <fullName>C06</fullName>
            </value>
            <value>
                <fullName>C07</fullName>
            </value>
            <value>
                <fullName>C08</fullName>
            </value>
            <value>
                <fullName>C10</fullName>
            </value>
            <value>
                <fullName>CP1</fullName>
            </value>
            <value>
                <fullName>D01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>