force-app/main/default/objects/Contact/fields/AttachedStoreCode__c.field-meta.xml
<CustomField>
    <fullName>AttachedStoreCode__c</fullName>
    <label>AttachedStoreCode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>