force-app/main/default/objects/Contact/fields/AttachedStoreCountry__c.field-meta.xml
<CustomField>
    <fullName>AttachedStoreCountry__c</fullName>
    <label>Attached Store Country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>