force-app/main/default/objects/Contact/fields/BeveragePreferences__c.field-meta.xml
<CustomField>
    <fullName>BeveragePreferences__c</fullName>
    <label>Beverage Preferences</label>
    <length>40</length>
    <type>Text</type>
</CustomField>