force-app/main/default/objects/Contact/fields/Can_Be_Contacted_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Can_Be_Contacted_By_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Be Contacted By Email</label>
    <type>Checkbox</type>
</CustomField>