force-app/main/default/objects/Contact/fields/Can_Be_Contacted_By_Mail__c.field-meta.xml
<CustomField>
    <fullName>Can_Be_Contacted_By_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Be Contacted By Mail</label>
    <type>Checkbox</type>
</CustomField>