force-app/main/default/objects/Contact/fields/Children__c.field-meta.xml
<CustomField>
    <fullName>Children__c</fullName>
    <label>Children</label>
    <length>40</length>
    <type>Text</type>
</CustomField>