force-app/main/default/objects/Contact/fields/ComplaintClosingDate__c.field-meta.xml
<CustomField>
    <fullName>ComplaintClosingDate__c</fullName>
    <description>Contains the last date at which a complaint or the client has been closed. Received from DREAM</description>
    <label>Complaint Closing Date</label>
    <type>Date</type>
</CustomField>