force-app/main/default/objects/Contact/fields/ContactedInLastNDays__c.field-meta.xml
<CustomField>
    <fullName>ContactedInLastNDays__c</fullName>
    <description>Ticked if the client has :
- a To-do not received from DREAM with action type equals to Email, Phone, SMS or Mobile Chat in the last 30 days
- an Appointment in the last 30 days</description>
    <formula>OR (

IF(LastContactDate__c &gt;= 

IF(
    MONTH(TODAY()) = 1,
    DATE(YEAR(TODAY()) - 1, 12, 01),
    DATE(YEAR(TODAY()), MONTH(TODAY()) - 1, 01)
), 

true,


 false),

IF(LastAppointmentDate__c &gt;= 

IF(
    MONTH(TODAY()) = 1,
    DATE(YEAR(TODAY()) - 1, 12, 01),
    DATE(YEAR(TODAY()), MONTH(TODAY()) - 1, 01)
), 

true,


 false)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacted in the last 30 days</label>
    <type>Checkbox</type>
</CustomField>