force-app/main/default/objects/Contact/fields/Date_Identity__c.field-meta.xml
<CustomField>
    <fullName>Date_Identity__c</fullName>
    <label>Date de création user Identity</label>
    <type>DateTime</type>
</CustomField>