force-app/main/default/objects/Contact/fields/DoNotSMS__c.field-meta.xml
<CustomField>
    <fullName>DoNotSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not SMS</label>
    <type>Checkbox</type>
</CustomField>