force-app/main/default/objects/Contact/fields/DreamSA__c.field-meta.xml
<CustomField>
    <fullName>DreamSA__c</fullName>
    <label>CA in DREAM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>