force-app/main/default/objects/Contact/fields/Dress__c.field-meta.xml
<CustomField>
    <fullName>Dress__c</fullName>
    <label>Dress</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>L0</fullName>
            </value>
            <value>
                <fullName>M0</fullName>
            </value>
            <value>
                <fullName>S0</fullName>
            </value>
            <value>
                <fullName>UN</fullName>
            </value>
            <value>
                <fullName>XXS</fullName>
            </value>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>XX</fullName>
            </value>
            <value>
                <fullName>XXL</fullName>
            </value>
            <value>
                <fullName>XXXL</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>34</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>37</fullName>
            </value>
            <value>
                <fullName>38</fullName>
            </value>
            <value>
                <fullName>39</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>41</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>43</fullName>
            </value>
            <value>
                <fullName>44</fullName>
            </value>
            <value>
                <fullName>46</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>52</fullName>
            </value>
            <value>
                <fullName>54</fullName>
            </value>
            <value>
                <fullName>56</fullName>
            </value>
            <value>
                <fullName>58</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>