force-app/main/default/objects/Contact/fields/EventInterest__c.field-meta.xml
<CustomField>
    <fullName>EventInterest__c</fullName>
    <label>Event</label>
    <length>80</length>
    <type>Text</type>
</CustomField>