force-app/main/default/objects/Contact/fields/Firstname2__c.field-meta.xml
<CustomField>
    <fullName>Firstname2__c</fullName>
    <label>First Name (Kana)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>