force-app/main/default/objects/Contact/fields/FirstNameOrigin__c.field-meta.xml
<CustomField>
    <fullName>FirstNameOrigin__c</fullName>
    <label>Firstname origin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>