force-app/main/default/objects/Contact/fields/FirstTrans__c.field-meta.xml
<CustomField>
    <fullName>FirstTrans__c</fullName>
    <label>1st Trans.</label>
    <type>Date</type>
</CustomField>