force-app/main/default/objects/Contact/fields/FlowerFlag__c.field-meta.xml
<CustomField>
    <fullName>FlowerFlag__c</fullName>
    <label>Flower Flag</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>