force-app/main/default/objects/Contact/fields/FoodPreferences__c.field-meta.xml
<CustomField>
    <fullName>FoodPreferences__c</fullName>
    <label>Food Preferences</label>
    <length>40</length>
    <type>Text</type>
</CustomField>