force-app/main/default/objects/Contact/fields/Gender_IMG__c.field-meta.xml
<CustomField>
    <fullName>Gender_IMG__c</fullName>
    <formula>IF(ISPICKVAL( Gender__c , &quot;Female&quot;), IMAGE(&quot;/resource/iconics/images/Avatarwoman.PNG&quot;,&quot;Avatar&quot;,40,40),
IF(ISPICKVAL( Gender__c , &quot;Male&quot;), IMAGE(&quot;/resource/iconics/images/Avatarman.PNG&quot;,&quot;Avatar&quot;,40,40), &apos; &apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender</label>
    <type>Text</type>
</CustomField>