force-app/main/default/objects/Contact/fields/GenderCode__c.field-meta.xml
<CustomField>
    <fullName>GenderCode__c</fullName>
    <description>RMS Gender code
1=female
2=male</description>
    <label>Gender code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>