force-app/main/default/objects/Contact/fields/HipoFlag__c.field-meta.xml
<CustomField>
    <fullName>HipoFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HipoFlag</label>
    <type>Checkbox</type>
</CustomField>