force-app/main/default/objects/Contact/fields/HistoQtePurchased__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchased__c</fullName>
    <label>HistoQtePurchased</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>