force-app/main/default/objects/Contact/fields/HistoQtePurchasedACC__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchasedACC__c</fullName>
    <label>HistoQtePurchasedACC</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>