force-app/main/default/objects/Contact/fields/HistoQtePurchasedBag__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchasedBag__c</fullName>
    <label>HistoQtePurchasedBag</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>