force-app/main/default/objects/Contact/fields/HistoQtePurchasedExotics__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchasedExotics__c</fullName>
    <label>HistoQtePurchasedExotics</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>