force-app/main/default/objects/Contact/fields/HistoQtePurchasedJEW__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchasedJEW__c</fullName>
    <label>HistoQtePurchasedJEW</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>