force-app/main/default/objects/Contact/fields/HistoQtePurchasedLG__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchasedLG__c</fullName>
    <label>HistoQtePurchasedLG</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>