force-app/main/default/objects/Contact/fields/HistoQtePurchasedMenRtw__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchasedMenRtw__c</fullName>
    <label>HistoQtePurchasedMenRtw</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>