force-app/main/default/objects/Contact/fields/HistoQtePurchasedMenShoe__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchasedMenShoe__c</fullName>
    <label>HistoQtePurchasedMenShoe</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>