force-app/main/default/objects/Contact/fields/HistoQtePurchasedPFM__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchasedPFM__c</fullName>
    <label>HistoQtePurchasedPFM</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>