force-app/main/default/objects/Contact/fields/HistoQtePurchasedRTW__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchasedRTW__c</fullName>
    <label>HistoQtePurchasedRTW</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>