force-app/main/default/objects/Contact/fields/HistoQtePurchasedSHOE__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchasedSHOE__c</fullName>
    <label>HistoQtePurchasedSHOE</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>