force-app/main/default/objects/Contact/fields/HistoQtePurchasedTravel__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchasedTravel__c</fullName>
    <label>HistoQtePurchasedTravel</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>