force-app/main/default/objects/Contact/fields/HistoQtePurchasedWAT__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchasedWAT__c</fullName>
    <label>HistoQtePurchasedWAT</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>