force-app/main/default/objects/Contact/fields/HistoQtePurchasedWatchJewelry__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchasedWatchJewelry__c</fullName>
    <label>HistoQtePurchasedWatchJewelry</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>