force-app/main/default/objects/Contact/fields/HistoQtePurchasedWomenRtw__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchasedWomenRtw__c</fullName>
    <label>HistoQtePurchasedWomenRtw</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>