force-app/main/default/objects/Contact/fields/HistoQtePurchasedWomenShoe__c.field-meta.xml
<CustomField>
    <fullName>HistoQtePurchasedWomenShoe__c</fullName>
    <label>HistoQtePurchasedWomenShoe</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>