force-app/main/default/objects/Contact/fields/HistoricalAccessoriesSpendEUR__c.field-meta.xml
<CustomField>
    <fullName>HistoricalAccessoriesSpendEUR__c</fullName>
    <label>Historical Accessories Spend (EUR)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>