force-app/main/default/objects/Contact/fields/HistoricalAccessoriesSpendYEN__c.field-meta.xml
<CustomField>
    <fullName>HistoricalAccessoriesSpendYEN__c</fullName>
    <label>Historical Accessories Spend (YEN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>