force-app/main/default/objects/Contact/fields/HistoricalAccessoriesSpendYUAN__c.field-meta.xml
<CustomField>
    <fullName>HistoricalAccessoriesSpendYUAN__c</fullName>
    <label>Historical Accessories Spend (YUAN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>