force-app/main/default/objects/Contact/fields/HistoricalJewelryNbrProducts__c.field-meta.xml
<CustomField>
    <fullName>HistoricalJewelryNbrProducts__c</fullName>
    <label>Historical Jewelry  # Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>