force-app/main/default/objects/Contact/fields/HistoricalJewelrySpendEUR__c.field-meta.xml
<CustomField>
    <fullName>HistoricalJewelrySpendEUR__c</fullName>
    <label>Historical Jewelry  Spend (EUR)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>