force-app/main/default/objects/Contact/fields/HistoricalJewelrySpendUSD__c.field-meta.xml
<CustomField>
    <fullName>HistoricalJewelrySpendUSD__c</fullName>
    <label>Historical Jewelry  Spend (USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>