force-app/main/default/objects/Contact/fields/HistoricalJewelrySpendYEN__c.field-meta.xml
<CustomField>
    <fullName>HistoricalJewelrySpendYEN__c</fullName>
    <label>Historical Jewelry  Spend (YEN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>