force-app/main/default/objects/Contact/fields/HistoricalJewelrySpendYUAN__c.field-meta.xml
<CustomField>
    <fullName>HistoricalJewelrySpendYUAN__c</fullName>
    <label>Historical Jewelry  Spend (YUAN)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>