force-app/main/default/objects/Contact/fields/HistoricalLeatherGoodNbrProducts__c.field-meta.xml
<CustomField>
    <fullName>HistoricalLeatherGoodNbrProducts__c</fullName>
    <label>Historical Leather Good # Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>