force-app/main/default/objects/Contact/fields/HistoricalLeatherGoodSpendEUR__c.field-meta.xml
<CustomField>
    <fullName>HistoricalLeatherGoodSpendEUR__c</fullName>
    <label>Historical Leather Good Spend (EUR)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>